clusters/constellation/apps/kitchenowl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl
  namespace: kitchenowl
spec:
  selector:
    app: kitchenowl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
