clusters/constellation/apps/kitchenowl/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchenowl
  namespace: kitchenowl
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "kitchenowl.spuxx.dev"
      secretName: spuxx.dev
  rules:
    - host: kitchenowl.spuxx.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitchenowl
                port:
                  number: 8080
